 * Fix teleport tooltip claiming it doesn't end turn in hog placing phase with inf. attack
 * Fix /hta, /hsa and /hya commands not writing message in chat
 * Limit hedgehog health to 268435455 to prevent some bugs
 * Fix Sudden Death starting in the second turn of a round rather than the first
 * Prevent voices from being spoken directly before a victory voice

Frontend:
 + Add setting to disable audio dampening when losing window focus
 * Fix rare crash when aborting video encoding in progress
 * Fix critical failure to cleanup teams list after rejoining game under certain conditions
 * Controllers are detected again
 * Fix failure to shutdown game window properly after player got kicked
 * No longer allow having schemes with equal names (case-insensitive)
 * Pseudo player names in chat (like “[server]”) are no longer clickable
 * Lobby/room: No longer allow opening context menu if no player selected

Highlander:
 * Fix all hogs receiving a free teleport after hog placement phase

TechRacer:
 * Fix rare bug causing crates and other objects to not appear on start of turn

Balanced Random Weapon:
 + Can adjust weapon start and crate probabilities

Random Weapon:
 * Fix breakage when enabling per-hog ammo

Continental supplies:
 + Continents are now selected before the game starts
 + Continents give hog different start health
 + Add Antarctica special: Upside-Down World (teleport to top of map)
 + Major rewrite of ALL texts for better usability
 + Add custom weapon tooltips
 + Improve audiovisual effects
 + Show message when hog receives new continent ammo
 + Sabotaged hedgehogs also emit smoke when it's not their turn
 + Can switch continent in reverse order with [Precise]+[Switch]
 * Invulnerability now protects from sabotage damage
 * Sabotage kills hog instantly when health reaches 0
 * Reliably prevent using of Lonely Cries and baseball bat specials when usage not allowed
 * Don't explode Anno 1302, Medicine and Bouncy Boomerang if drowning