@@ -32,6 +32,7 @@ Game:
  * Limit hedgehog health to 268435455 to prevent some bugs
  * Fix Sudden Death starting in the second turn of a round rather than the first
  * Prevent voices from being spoken directly before a victory voice
+ * Fix damage not being displayed if hog drowns in water with 100% opacity (like in Compost theme)
 
 Frontend:
  + Add setting to disable audio dampening when losing window focus
